@@ -28,18 +28,34 @@
 *   DATA DEFINITIONS
 */
 typedef enum {
-    K_CLASS, K_DEFINE, K_FUNCTION
+    K_CLASS, K_DEFINE, K_FUNCTION, K_VARIABLE
 } phpKind;
 
 static kindOption PhpKinds [] = {
     { TRUE, 'c', "class",    "classes" },
     { TRUE, 'd', "define",   "constant definitions" },
-    { TRUE, 'f', "function", "functions" }
+    { TRUE, 'f', "function", "functions" },
+    { TRUE, 'v', "variable", "variables" }
 };
 
 /*
 *   FUNCTION DEFINITIONS
 */
+
+static boolean isLetter(const int c)
+{
+    return (boolean)(isalpha(c) || (c >= 127  &&  c <= 255));
+}
+
+static boolean isVarChar1(const int c)
+{
+    return (boolean)(isLetter (c)  ||  c == '_');
+}
+
+static boolean isVarChar(const int c)
+{
+    return (boolean)(isVarChar1 (c) || isdigit (c));
+}
 
 static void findPhpTags (void)
 {
@@ -53,7 +69,24 @@ static void findPhpTags (void)
 	while (isspace (*cp))
 	    cp++;
 
-	if (strncmp ((const char*) cp, "function", (size_t) 8) == 0  &&
+	if (*(const char*)cp == '$'  &&  isVarChar1 (*(const char*)(cp+1)))
+	{
+	    cp += 1;
+	    while (isVarChar ((int) *cp))
+	    {
+		vStringPut (name, (int) *cp);
+		++cp;
+	    }
+	    while (isspace ((int) *cp))
+		++cp;
+	    if (*(const char*) cp == '=')
+	    {
+		vStringTerminate (name);
+		makeSimpleTag (name, PhpKinds, K_VARIABLE);
+		vStringClear (name);
+	    }
+	}
+	else if (strncmp ((const char*) cp, "function", (size_t) 8) == 0  &&
 	    isspace ((int) cp [8]))
 	{
 	    cp += 8;
@@ -116,7 +149,6 @@ static void findPhpTags (void)
 	    makeSimpleTag (name, PhpKinds, K_DEFINE);
 	    vStringClear (name);
 	}
-
     }
     vStringDelete (name);
 }
